# LinuxApplicationDevelopment

01_GitBuildReq/: helloWorld.c
02_TerminalProject/: .some.c.swp  Makefile  Show.c  curs
03_Multifile/: Makefile
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  scen1.gdb  scen2.gdb  test.txt
06_Regexps/: Makefile  esub.c
07_TracingFencing/: Makefile  fake_remove.c  move.c
08_Environmental/: Makefile.am  configure.ac
08_Environmental/src/: rhasher.c
08_Environmental/src/.deps/: rhasher.Po
09_I18n/: configure.ac
09_I18n/po/: ru.po
09_I18n/src/: guess.c
